[gd_scene load_steps=8 format=3 uid="uid://hrarg7jikf1q"]

[ext_resource type="Script" uid="uid://53h300un27pd" path="res://scenes/objects/item_pickup.gd" id="1_xq878"]
[ext_resource type="PackedScene" uid="uid://dq1aer8ffbbkx" path="res://assets/items/pickup/ItemPickup.blend" id="3_7axpt"]
[ext_resource type="PackedScene" uid="uid://cruj3552j7a68" path="res://assets/race/pickup/carat.tscn" id="3_bbpbm"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_t2465"]
height = 2.25
radius = 0.788274

[sub_resource type="Animation" id="Animation_aw7da"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ItemPickup:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ItemPickup:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Visuals:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Visuals:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_fn0sn"]
resource_name = "hover"
length = 8.0
loop_mode = 1
step = 1.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ItemPickup:rotation")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(1, 4.9),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0.139626, 0.0349066), Vector3(0, -0.139626, -0.0349066)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ItemPickup:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 2, 4, 6.1),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector3(0, 1, 0), Vector3(0, 1.35, 0), Vector3(0, 1, 0), Vector3(0, 1.35, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Visuals:position")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 2, 4, 6.1),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 0.35, 0), Vector3(0, 0, 0), Vector3(0, 0.35, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Visuals:rotation")
tracks/3/interp = 2
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(1, 4.9),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0.139626, 0.0349066), Vector3(0, -0.139626, -0.0349066)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_fb0da"]
_data = {
&"RESET": SubResource("Animation_aw7da"),
&"hover": SubResource("Animation_fn0sn")
}

[node name="ItemPickup" type="Area3D"]
collision_layer = 8
collision_mask = 6
monitorable = false
script = ExtResource("1_xq878")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.125, 0)
shape = SubResource("CylinderShape3D_t2465")

[node name="Visuals" type="Node3D" parent="."]

[node name="Carat" parent="Visuals" instance=ExtResource("3_bbpbm")]
transform = Transform3D(-0.00849814, 0.221212, -0.4146, -0.0159156, 0.414294, 0.221376, 0.469654, 0.0180423, -1.81227e-08, -2.79397e-09, 1, -0.05058)

[node name="ItemPickup" parent="." instance=ExtResource("3_7axpt")]
transform = Transform3D(0.6, 0, 0, 0, 0.6, 0, 0, 0, 0.6, 0, 1, 0)
visible = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
deterministic = true
callback_mode_process = 0
libraries = {
&"": SubResource("AnimationLibrary_fb0da")
}
autoplay = "hover"

[node name="RespawnTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="RespawnTimer" to="." method="_on_respawn_timer_timeout"]
